--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,30 +1,37 @@
-name: Deploy to GitHub Pages
-
+on:
+jobs:
+name: Deploy static site to Pages
 on:
   push:
-    branches:
-      - main
-
+    branches: ["main"]
+permissions:
+  contents: read
+  pages: write
+  id-token: write
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
+      - name: Checkout
         uses: actions/checkout@v4
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: "20"
-
-      - name: Create config.js from secrets
+      - name: Setup Pages
+        uses: actions/configure-pages@v5
+      - name: Inject config.js from secrets
         run: |
           mkdir -p docs/js/google_sheets_services
           echo "window.APP_CONFIG = ${{ secrets.APP_CONFIG }};" > docs/js/google_sheets_services/config.js
           echo "window.SPREADSHEET_IDS = ${{ env.SPREADSHEET_IDS }};" >> docs/js/google_sheets_services/config.js
-
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v4
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./docs
+          path: docs/
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
