--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,6 +15,8 @@ jobs:
       PACK_LISTS: ${{ vars.PACK_LISTS }}
       PROD_SCHED: ${{ vars.PROD_SCHED }}
       CACHE: ${{ vars.CACHE }}
+      API_KEY: ${{ secrets.API_KEY }}
+      CLIENT_ID: ${{ secrets.CLIENT_ID }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -23,7 +25,7 @@ jobs:
       - name: Inject config.js from secrets and variables
         run: |
           mkdir -p docs/js/google_sheets_services
-          echo "window.APP_CONFIG = { API_KEY: '${{ secrets.API_KEY }}', CLIENT_ID: '${{ secrets.CLIENT_ID }}', SCOPES: '${SCOPES}' };" > docs/js/google_sheets_services/config.js
+          echo "window.APP_CONFIG = { API_KEY: '${API_KEY}', CLIENT_ID: '${CLIENT_ID}', SCOPES: '${SCOPES}' };" > docs/js/google_sheets_services/config.js
           echo "window.SPREADSHEET_IDS = { INVENTORY: '${INVENTORY}', PACK_LISTS: '${PACK_LISTS}', PROD_SCHED: '${PROD_SCHED}', CACHE: '${CACHE}' };" >> docs/js/google_sheets_services/config.js
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
