--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,6 +9,7 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-latest
+    environment: github-pages
     env:
       SCOPES: ${{ vars.SCOPES }}
       INVENTORY: ${{ vars.INVENTORY }}
