fix autosave logic

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,7 +12,7 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-latest
-    environment: github-pages
+    #environment: github-pages
     env:
       SCOPES: ${{ vars.SCOPES }}
       INVENTORY: ${{ vars.INVENTORY }}
