--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,7 +12,7 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-latest
-    #environment: github-pages
+    environment: github-pages
     env:
       SCOPES: ${{ vars.SCOPES }}
       INVENTORY: ${{ vars.INVENTORY }}
@@ -45,6 +45,8 @@ jobs:
         uses: actions/upload-pages-artifact@v3
         with:
           path: docs/
+      - name: pause for 10 seconds
+        run: sleep 10
   deploy:
     runs-on: ubuntu-latest
     needs: build
