--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,14 +1,19 @@
 name: Deploy static site to Pages
+
 on:
   push:
     branches: ["main"]
+  workflow_dispatch:
+
 concurrency:
-  group: pages
+  group: "pages"
   cancel-in-progress: false
+
 permissions:
   contents: read
   pages: write
   id-token: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -29,14 +34,19 @@ jobs:
       - name: Inject config.js from secrets and variables
         run: |
           mkdir -p docs/js/google_sheets_services
+          BUILD_ID="${GITHUB_SHA:0:8}-$(date +%s)"
           cat > docs/js/google_sheets_services/config.js << EOF
           window.APP_CONFIG = { API_KEY: '${API_KEY}', CLIENT_ID: '${CLIENT_ID}', SCOPES: '${SCOPES}' };
           window.SPREADSHEET_IDS = { INVENTORY: '${INVENTORY}', PACK_LISTS: '${PACK_LISTS}', PROD_SCHED: '${PROD_SCHED}', CACHE: '${CACHE}' };
-          // Build timestamp: $(date -u +%Y%m%d%H%M%S)
+          // Build: ${BUILD_ID}
           EOF
           chmod 644 docs/js/google_sheets_services/config.js
+          touch docs/.nojekyll
+          echo "${BUILD_ID}" > docs/BUILD_ID
+          echo "${GITHUB_RUN_NUMBER}-${GITHUB_RUN_ATTEMPT}" > docs/.build-number
           ls -la docs/js/google_sheets_services/config.js
           echo "Config file size: $(wc -c < docs/js/google_sheets_services/config.js) bytes"
+          echo "Build ID: ${BUILD_ID}"
       - name: Verify docs structure
         run: |
           echo "=== Directory structure ==="
@@ -45,11 +55,14 @@ jobs:
         uses: actions/upload-pages-artifact@v3
         with:
           path: docs/
-      - name: pause for 10 seconds
-        run: sleep 10
+          retention-days: 1
+  
   deploy:
     runs-on: ubuntu-latest
     needs: build
+    permissions:
+      pages: write
+      id-token: write
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
