--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,12 +10,10 @@ concurrency:
   cancel-in-progress: false
 
 permissions:
-  contents: read
-  pages: write
-  id-token: write
+  contents: write
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
     environment: github-pages
     env:
@@ -29,8 +27,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Setup Pages
-        uses: actions/configure-pages@v5
+      
       - name: Inject config.js from secrets and variables
         run: |
           mkdir -p docs/js/google_sheets_services
@@ -43,30 +40,13 @@ jobs:
           chmod 644 docs/js/google_sheets_services/config.js
           touch docs/.nojekyll
           echo "${BUILD_ID}" > docs/BUILD_ID
-          echo "${GITHUB_RUN_NUMBER}-${GITHUB_RUN_ATTEMPT}" > docs/.build-number
           ls -la docs/js/google_sheets_services/config.js
-          echo "Config file size: $(wc -c < docs/js/google_sheets_services/config.js) bytes"
-          echo "Build ID: ${BUILD_ID}"
-      - name: Verify docs structure
-        run: |
-          echo "=== Directory structure ==="
-          find docs/js/google_sheets_services -type f -ls
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
-        with:
-          path: docs/
-          retention-days: 1
-  
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    permissions:
-      pages: write
-      id-token: write
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    steps:
+          echo "Config file created with ${BUILD_ID}"
+      
       - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+        uses: JamesIves/github-pages-deploy-action@v4
+        with:
+          folder: docs
+          branch: gh-pages
+          clean: true
+          single-commit: true
