improve autosave logic

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,3 +1,4 @@
+# ensure github is set up to deploy to pages using "actions" not "from a branch"
 name: TopShelf Deploy to Github Pages testing
 on:
   push:
